modify md and etc

--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -94,7 +94,17 @@ def main():
     list1.clear()
     print(list1)
 
-
+'''二维列表（数组）
+>>> hh= [[]] * 3
+>>> print(hh)
+[[], [], []]
+>>> hh[0] = [None] * 3
+>>> print(hh)
+[[None, None, None], [], []]
+>>> hh[0][0] = 1
+>>> print(hh)
+[[1, None, None], [], []]
+'''
 if __name__ == '__main__':
     main()
 ```
@@ -270,10 +280,10 @@ def main():
     set2.update([11, 12])
     print(set1)
     print(set2)
+    # remove
     set2.discard(5)
-    # remove的元素如果不存在会引发KeyError
     if 4 in set2:
-        set2.remove(4)
+        set2.remove(4) # remove的元素如果不存在会引发KeyError
     print(set2)
     # 遍历集合容器
     for elem in set2:
@@ -281,26 +291,18 @@ def main():
     print()
     # 将元组转换成集合
     set3 = set((1, 2, 3, 3, 2, 1))
-    print(set3.pop())
+    print(set3.pop()) # 先入先出
     print(set3)
     # 集合的交集、并集、差集、对称差运算
-    print(set1 & set2)
-    # print(set1.intersection(set2))
-    print(set1 | set2)
-    # print(set1.union(set2))
-    print(set1 - set2)
-    # print(set1.difference(set2))
-    print(set1 ^ set2)
-    # print(set1.symmetric_difference(set2))
+    print(set1 & set2)      # print(set1.intersection(set2))
+    print(set1 | set2)      # print(set1.union(set2))
+    print(set1 - set2)      # print(set1.difference(set2))   -show what in set1 but not in set2
+    print(set1 ^ set2)      # print(set1.symmetric_difference(set2))
     # 判断子集和超集
-    print(set2 <= set1)
-    # print(set2.issubset(set1))
-    print(set3 <= set1)
-    # print(set3.issubset(set1))
-    print(set1 >= set2)
-    # print(set1.issuperset(set2))
-    print(set1 >= set3)
-    # print(set1.issuperset(set3))
+    print(set2 <= set1)     # print(set2.issubset(set1))
+    print(set3 <= set1)     # print(set3.issubset(set1))
+    print(set1 >= set2)     # print(set1.issuperset(set2))
+    print(set1 >= set3)     # print(set1.issuperset(set3))
 
 
 if __name__ == '__main__':
@@ -325,7 +327,7 @@ def main():
     # 更新字典中的元素
     scores['白元芳'] = 65
     scores['诸葛王朗'] = 71
-    scores.update(冷面=67, 方启鹤=85)
+    scores.update(冷面=67, 方启鹤=85)    # Note there is no ""
     print(scores)
     if '武则天' in scores:
         print(scores['武则天'])
@@ -333,9 +335,9 @@ def main():
     # get方法也是通过键获取对应的值但是可以设置默认值
     print(scores.get('武则天', 60))
     # 删除字典中的元素
-    print(scores.popitem())
-    print(scores.popitem())
-    print(scores.pop('骆昊', 100))
+    print(scores.popitem())             # pop from right to left
+    print(scores.popitem()) 
+    print(scores.pop('骆昊', 100))      # pop the specific key, if key is not exist, return the default value    
     # 清空字典
     scores.clear()
     print(scores)
